<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/login"
        android:title="@string/log_in" />
    <item
        android:id="@+id/rationBalance"
        android:title="@string/ration_balance" />
    <item
        android:id="@+id/animalRegistration"
        android:title="@string/animal_registration" />
    <item
        android:id="@+id/animalHealth"
        android:title="@string/animal_health" />
    <item
        android:id="@+id/animalBreeding"
        android:title="@string/animal_breeding" />
    <item
        android:id="@+id/performanceRecord"
        android:title="@string/performance_record" />
    <item
        android:id="@+id/statisticalAnalysis"
        android:title="@string/statistical_analysis" />
    <item
        android:id="@+id/feedback"
        android:title="@string/feedback" />
</menu>